# grocery-sales-forecasting

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  restore.sh  setup.cfg  tasks.py
.dvc/: config
configs/: catboost_params.yaml  config.yaml  mlflow.yaml
data/: .gitignore  grocery.sql.dvc  sells.parquet.dvc
grocery-sales-forecasting/: feature_generation.py  infer.py  train.py
grocery_sales_forecasting_web/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
mlops-2023/: target_generation.py
mlops_2023/: infer.py  train.py
models/: catboost.cbm.dvc
nginx/: Dockerfile  nginx.conf
notebooks/: experiments.ipynb
sql/: database_connection.py  tables_creation.py
sql/create_tables/: predictions.sql  sales.sql
templates/: index.html  result.html  result_training.html
ts_project/: .gitignore  .pre-commit-config.yaml  README.md  create_kernel.sh  data.dvc  feature_generation.py  infer.py  metrics.py  models.dvc  pyproject.toml  train.py
ts_project/conf/: config.yaml
ts_project/data/: .gitignore  predictions.dvc  sells__tmp.parquet.dvc
ts_project/models/: .gitignore  catboost.cbm.dvc
