[tool.poetry]
name = "grocery-sales-forecasting"
version = "0.1.0"
description = ""
authors = ["simonyelisey <yeliseevsemyon@gmail.com>"]
readme = "README.md"
packages = [{include = "grocery-sales-forecasting"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
black = "22.3.0"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
hydra-core = "^1.3.2"
numpy = "^1.26.2"
catboost = "^1.2.2"
pyarrow = "^14.0.1"
dvc = "^3.31.1"
dvc-gdrive = "^2.20.0"
joblib = "^1.3.2"
mlflow = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
